--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div class="container banner-content"> 
             <div class="row">
                 <header class="centered">
-                    <h1>Sam Doe</h1>
-                    <p>PROFESSIONAL WEB DESIGNER & DEVELOPER</p>
+                    <h1>Ramazan Temur</h1>
+                    <p>ENGINEERING STUDENT</p>
                 </header>
                 <div class="social-icons">
                         <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
