--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li class="active"><a href="#home" class="scroll-link">Home</a></li>
           <li><a href="#aboutUs" class="scroll-link">About Us</a></li>
           <li><a href="#skills" class="scroll-link">Skills</a></li>
-          <li><a href="#experience" class="scroll-link">Experience</a></li>
+          <li><a href="#experience" class="scroll-link">Exper</a></li>
           <li><a href="#portfolio" class="scroll-link">Portfolio</a></li>
           <li><a href="#contactUs" class="scroll-link">Contact Us</a></li>
         </ul>
